@@ -1,7 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 70_mod_mirrorbrain.conf 121 RMD160 9acbd1532ce8b21f32b04cc8a9dc003aed591294 SHA1 31403a2f4f9e493637e171cc45a3eaa7a0265753 SHA256 9e21ebd72dfa45ab03130d14e7667ef4bdc51427c18c9e2a90ff27d1031ada66
+DIST mirrorbrain-2.11.3.tar.gz 356242 RMD160 138bad4b52622e93069640414fee3fee365e135f SHA1 bb9f02aca01d6b1494f6067dd2bff1125c092e7d SHA256 cf18c3863f064463413744c4a537b3180bbbfbfd27d69a313236498a898af03e
 DIST mirrorbrain-2.8.1.tar.gz 308537 RMD160 5f3a1dc08c005e7151b7bba9030e08e1b18ed39b SHA1 929c9bd427b9d5d9b9aaf9bc256a20d08516ea27 SHA256 999262154d672e8c2339cbf67ec5ed9cf654a5767473893c91894b742c8f6bf5
 DIST mirrorbrain-2.8.tar.gz 307722 RMD160 83fccfc8bff5a9c07d38407b44681135c3741bb9 SHA1 79470b1c46b6fb861001e7ff9c903f41948eb8e8 SHA256 204ea49097da5502443d7f8a5f34181667486de6c0be227da7e4524cba146125
+EBUILD mod_mirrorbrain-2.11.3.ebuild 1022 RMD160 3c059df65c38acadf38a5131b0849c544bc56c16 SHA1 5402ad9400810fe655f74d66dba66e9f3de40492 SHA256 4703b52099c8a3016597c07446a67fe40db8948a5a895e00e9842bcb6b50d575
 EBUILD mod_mirrorbrain-2.8.1.ebuild 1022 RMD160 3c059df65c38acadf38a5131b0849c544bc56c16 SHA1 5402ad9400810fe655f74d66dba66e9f3de40492 SHA256 4703b52099c8a3016597c07446a67fe40db8948a5a895e00e9842bcb6b50d575
 EBUILD mod_mirrorbrain-2.8.ebuild 1022 RMD160 3c059df65c38acadf38a5131b0849c544bc56c16 SHA1 5402ad9400810fe655f74d66dba66e9f3de40492 SHA256 4703b52099c8a3016597c07446a67fe40db8948a5a895e00e9842bcb6b50d575
 EBUILD mod_mirrorbrain-9999.ebuild 1082 RMD160 64352ad87136f43f8cbc52904c9ba358e4e2faef SHA1 bf1958084913c0b659ecd7c0775c75a4bd28147b SHA256 4df9db9cb6a298997b41d006ff7806e9559436a12aaf737926cbd57d2c3d7336
-MISC ChangeLog 549 RMD160 503453240e2d035e5ba8a89beb92629bb954767c SHA1 28f0457cc28c2cee30c3d9b829e345cbe67486c8 SHA256 037af46d404263c23db22ec05d8ec0dcdc1583114a49dda4b1ae255452bd8e2f
+MISC ChangeLog 691 RMD160 f53f71cd71d04f00c72dd590c15d1e63c6e8a00a SHA1 0684a7c18e535c06a6a6b07737dcb0e98816bfa9 SHA256 2b06e4d9ef257d5c38a2e5b6ea322f8748e4774fc919c3b6b6f604f29f1a57ad
+MISC metadata.xml 649 RMD160 8be68c6987904ff4934a5abb98d71cecf44d8bf9 SHA1 fb5fcb17f46cfe210dab230d797602f9fd142480 SHA256 2e4780f8352e9e917578a1599ea8044f45eec9e8caae62735a9a774953440c19
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFLKeEQQW+hXSf0t0IRAsI0AKDGq8h/CXRwKpKH57UqsE4ggk2JMwCfYMy8
+Ug1wSbPO9DmKAhsz4kDjExA=
+=0Qoe
+-----END PGP SIGNATURE-----
